starting profile.js event listener

--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
             <h2>
                 Create Your Profile:
             </h2>
+        <form id="form-data">
             <span>
-                <input type="text" placeholder="Your Name">
+                <input id="name" type="text" placeholder="Your Name">
             </span>
             <span>
-                <input type="text" placeholder="Password">
+                <input id="pass" type="text" placeholder="Password">
             </span>
-            <button>Create Profile</button>
+            <button id="pro-button">Create Profile</button>
+        </form>
 
 
         </section>
@@ -41,7 +43,7 @@
 
     </footer>
 
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./profile.js"></script>
 </body>
 
 </html>
