--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             </h2>
         <form id="form-data">
             <span>
-                <input id="name" type="text" placeholder="Your Name">
+                <input id="name" name="name" type="text" placeholder="Your Name">
             </span>
             <span>
-                <input id="pass" type="text" placeholder="Password">
+                <input id="pass" name="pass" type="password" placeholder="Password">
             </span>
             <button id="pro-button">Create Profile</button>
         </form>
