fix linting errors

--- a/input-page.html
+++ b/input-page.html
@@ -34,7 +34,7 @@
 
         </section>
         <section class="hidden">
-      
+            <span id="todo1">...</span>
         </section>
     </main>
 </body>
