created getUser and attempted 1st stretch goal

--- a/input-page.html
+++ b/input-page.html
@@ -36,6 +36,7 @@
         <section class="hidden">
             <span id="todo1">...</span>
         </section>
+        <a href="./index.html">Back to login</a>
     </main>
 </body>
 </html>
